--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -23,7 +23,7 @@
         android:autofillHints=""
         android:gravity="top"
         android:hint="Enter your feedback..."
-        android:inputType="TODO"
+        android:inputType="text"
         android:minLines="4" />
 
     <Button
