--- a/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
@@ -38,7 +38,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="Marilyn Bvaton"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="Normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +143,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="Normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +196,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -250,7 +250,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="Normal"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -304,7 +304,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -358,7 +358,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -412,7 +412,7 @@
                 android:layout_marginTop="1dp"
                 android:autofillHints=""
                 android:background="@null"
-                android:inputType="TODO"
+                android:inputType="text"
                 android:text="High"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
