add constraints to fix lint error

--- a/app/src/main/res/layout/last_fifteen_day.xml
+++ b/app/src/main/res/layout/last_fifteen_day.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAlignment="center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/constraintLayout7"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="1dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView49"
@@ -446,22 +448,25 @@
         android:id="@+id/imageView29_b"
         android:layout_width="424dp"
         android:layout_height="82dp"
+        android:layout_marginBottom="217dp"
         android:contentDescription="TODO"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/rectangle1"
-        tools:layout_editor_absoluteY="432dp" />
+        app:srcCompat="@drawable/rectangle1" />
 
     <TextView
         android:id="@+id/textView43_b"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="29dp"
         android:fontFamily="@font/poppins_bold"
         android:text="Last Updated : 05/05/2022, 12:39 pm"
         android:textSize="12sp"
-        tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="461dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageView29_b"
+        app:layout_constraintTop_toTopOf="@+id/imageView29_b" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/headerCard_a"
@@ -536,18 +541,21 @@
         android:id="@+id/imageView10_b"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="18dp"
         android:contentDescription="TODO"
-        app:srcCompat="@drawable/chevrondown"
-        tools:layout_editor_absoluteX="371dp"
-        tools:layout_editor_absoluteY="160dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerCard_a"
+        app:srcCompat="@drawable/chevrondown" />
 
     <ImageView
         android:id="@+id/imageView22_b"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="93dp"
         android:contentDescription="TODO"
-        app:srcCompat="@drawable/rectangle3"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="725dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/rectangle3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
