--- a/app/src/main/res/layout/activity_fall_alert.xml
+++ b/app/src/main/res/layout/activity_fall_alert.xml
@@ -205,16 +205,20 @@
         android:id="@+id/imageView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="491dp"
         android:contentDescription="TODO"
-        app:srcCompat="@drawable/rectangle3"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="725dp" />
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:srcCompat="@drawable/rectangle3" />
 
     <ImageView
         android:id="@+id/imageView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="TODO"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
         app:srcCompat="@drawable/rectangle1646"
         tools:layout_editor_absoluteX="338dp"
         tools:layout_editor_absoluteY="552dp" />
