--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -28,7 +28,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Welcome ***usert***"
+                    android:text="@string/welcome_caretaker"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
