--- a/app/src/main/res/layout/activity_homepage4admin.xml
+++ b/app/src/main/res/layout/activity_homepage4admin.xml
@@ -204,7 +204,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Welcome ***usert***"
+                    android:text="@string/welcome_admin"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
