--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="64dp"
-        android:text="Lorem ipsum dolor sit amet"
+        android:text="@string/slogan_on_main_activity"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
